| Summary: | ASTERISK-26313: chan_sip : Asterisk restart seems to be required for changing encryption option | ||||
| Reporter: | benasse (benasse) | Labels: | |||
| Date Opened: | 2016-08-24 09:40:13 | Date Closed: | 2017-03-01 11:44:58.000-0600 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Channels/chan_sip/General | ||
| Versions: | 13.10.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Debian 8 3.16.0-4-amd64 | Attachments: | ( 0) asterisk-13.13.1-dtls-reload.patch ( 1) full.log ( 2) sip1.conf ( 3) sip2.conf | ||
| Description: | Below, the steps to reproduce :
* I have a working peer, configured as in sip1.conf, I call the number 123 * I remove the parameters related to WebRTC as in sip2.conf * I do a SIP reload * When I try to make a call I get the following message in the asterisk CLI : {code}WARNING[5107][C-0000000e] chan_sip.c: Failed to receive SDP offer/answer with required SRTP crypto attributes for audio{code} Atached the asterisk log : First call: callid asterisk: C-0000000c CallID SIP: 83deae9a-5991-3a37-7c58-12f89d3ede6d Second call: callid asterisk: C-0000000e CallID SIP: d9c74c18-a685-418b-a8f5-ea9938ac3be3 After a restart of asterisk, the line is working properly. Do not hesitate if you want more information. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-24 09:40:13.883-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2016-08-24 17:24:41.051-0500 What logger settings did you enable to capture the full log? Can you be sure WARNING,ERROR,NOTICE,VERBOSE,DEBUG are all enabled and then be sure that verbose and debug are both turned up to 5 or above. By: benasse (benasse) 2016-08-25 07:06:01.212-0500 I did not put the core debug to 5. I have updated the description and put the new asterisk log. By: Vitezslav Novy (vnovy) 2017-02-26 07:26:23.314-0600 This problem seems to be fixed in asterisk 14. I attach patch for asterisk 13.13.1 By: Rusty Newton (rnewton) 2017-02-26 08:39:59.234-0600 If someone wants to confirm testing of the patch in 13 and that it works there, you can then push it through on Gerrit to get it into Asterisk. https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Friendly Automation (friendly-automation) 2017-03-01 11:44:59.539-0600 Change 5086 merged by zuul: chan_sip: Allow DTLS to be disabled when reloading. [https://gerrit.asterisk.org/5086|https://gerrit.asterisk.org/5086] | ||||